# test-report-poc

./: .tool-versions  index.html  pyproject.toml
.github/workflows/: push.yml
12/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
12/export/: influxDbData.txt  prometheusData.txt
12/history/: duration-trend.json  history.json  retry-trend.json
12/widgets/: categories-trend.json  duration.json  executors.json  history-trend.json  severity.json  summary.json
13/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
13/export/: influxDbData.txt  prometheusData.txt
13/history/: history.json  retry-trend.json
13/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  severity.json  summary.json
14/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
14/export/: influxDbData.txt
14/history/: categories-trend.json  duration-trend.json  history.json
14/widgets/: duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  summary.json
16/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
16/export/: influxDbData.txt  prometheusData.txt
16/history/: categories-trend.json  history-trend.json  history.json  retry-trend.json
16/widgets/: duration-trend.json  duration.json  executors.json  severity.json  summary.json
21/data/: behaviors.json  packages.json  (+3 more)
package-b/: package_b.py
src/: pyproject.toml
src/package-a/: package_a.py
tests/: test_numbers.py  test_str.py
(+648 files in other folders)
