[tool.poetry]
name = "package-a"
version = "0.1.0"
description = ""
authors = ["Allen <allen.burgess1@nhs.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pytest = "^8.0.2"
mesh-common = { git = "git@github.com:NHSDigital/mesh-common.git", tag="v0.4.5" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
